hotfix - Fix collapse for event filter.

--- a/scss/components/node/_event.scss
+++ b/scss/components/node/_event.scss
@@ -108,7 +108,8 @@
 //list events
 .view-display-id-ding_event_list {
  h3 .date-display-single {
-    @extend .display-4;
+   font-size: 40px;
+  text-transform: uppercase;
   }
   .view-content {
     @include make-col(12);
@@ -161,3 +162,27 @@
     }
   }
 }
+
+
+.bef-checkboxes {
+  @include clearfix();
+}
+
+.fieldset-legend,
+a.fieldset-title {
+  display: block;
+  width: auto;
+}
+
+.fieldset-legend {
+  height: 50px;
+}
+
+a.fieldset-title {
+  font-size: 20px;
+}
+
+fieldset.collapsible .fieldset-title::after {
+  content: "\e905";
+}
+
